--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 **/.idea/caches/build_file_checksums.ser
+Lab2/.idea/Lab2.iml
+Lab2/.idea/modules.xml
+Lab2/.idea/vcs.xml
