--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@ fabric.properties
 Lab2/.idea/Lab2.iml
 Lab2/.idea/modules.xml
 Lab2/.idea/vcs.xml
+Assignment1/.idea/inspectionProfiles/Project_Default.xml
